cmd/goModifyPacket/iptables_save
# Generated by iptables-save v1.8.7 on Thu Nov 30 17:05:13 2023
*mangle
:PREROUTING ACCEPT [0:0]
#-A PREROUTING -i wlp0s20f3 -p udp --sport 2268 -j NFQUEUE --queue-num 0
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:LIBVIRT_PRT - [0:0]
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Thu Nov 30 17:05:13 2023
# Generated by iptables-save v1.8.7 on Thu Nov 30 17:05:13 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A OUTPUT -o wlp0s20f3 -p udp --dport 2268 -j NFQUEUE --queue-num 1
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:LIBVIRT_FWI - [0:0]
:LIBVIRT_FWO - [0:0]
:LIBVIRT_FWX - [0:0]
:LIBVIRT_INP - [0:0]
:LIBVIRT_OUT - [0:0]
#-A INPUT -i wlp0s20f3 -p udp --sport 2268 -j LOG --log-level 6 --log-prefix "INPUT:UDP"
-A INPUT -i wlp0s20f3 -p udp --sport 2268 -j NFQUEUE --queue-num 0
-A INPUT -j LIBVIRT_INP
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-siden -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-siden -j DOCKER
-A FORWARD -i br-siden ! -o br-siden -j ACCEPT
-A FORWARD -i br-siden -o br-siden -j ACCEPT
-A FORWARD -j LIBVIRT_FWX
-A FORWARD -j LIBVIRT_FWI
-A FORWARD -j LIBVIRT_FWO
-A OUTPUT -j LIBVIRT_OUT
-A DOCKER -d 10.99.0.2/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 9101 -j ACCEPT
-A DOCKER -d 10.99.0.103/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 10.99.0.99/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 10086 -j ACCEPT
-A DOCKER -d 10.99.0.99/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 9000 -j ACCEPT
-A DOCKER -d 10.99.0.3/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 9090 -j ACCEPT
-A DOCKER -d 10.99.0.102/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 8200 -j ACCEPT
-A DOCKER -d 10.99.0.100/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 9102 -j ACCEPT
-A DOCKER -d 10.99.0.100/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 9090 -j ACCEPT
-A DOCKER -d 10.99.0.100/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 8081 -j ACCEPT
-A DOCKER -d 10.99.0.101/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 5432 -j ACCEPT
-A DOCKER -d 10.99.0.104/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 9001 -j ACCEPT
-A DOCKER -d 10.99.0.104/32 ! -i br-siden -o br-siden -p tcp -m tcp --dport 2020 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-siden ! -o br-siden -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-siden -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A LIBVIRT_FWI -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A LIBVIRT_FWI -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWO -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A LIBVIRT_FWO -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A LIBVIRT_FWX -i virbr0 -o virbr0 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A LIBVIRT_INP -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A LIBVIRT_OUT -o virbr0 -p tcp -m tcp --dport 68 -j ACCEPT
COMMIT
# Completed on Thu Nov 30 17:05:13 2023
# Generated by iptables-save v1.8.7 on Thu Nov 30 17:05:13 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
:LIBVIRT_PRT - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -o docker0 -m addrtype --src-type LOCAL -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -o br-siden -m addrtype --src-type LOCAL -j MASQUERADE
-A POSTROUTING -s 10.99.0.0/24 ! -o br-siden -j MASQUERADE
-A POSTROUTING -j LIBVIRT_PRT
-A POSTROUTING -s 10.99.0.2/32 -d 10.99.0.2/32 -p tcp -m tcp --dport 9101 -j MASQUERADE
-A POSTROUTING -s 10.99.0.103/32 -d 10.99.0.103/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 10.99.0.99/32 -d 10.99.0.99/32 -p tcp -m tcp --dport 10086 -j MASQUERADE
-A POSTROUTING -s 10.99.0.99/32 -d 10.99.0.99/32 -p tcp -m tcp --dport 9000 -j MASQUERADE
-A POSTROUTING -s 10.99.0.3/32 -d 10.99.0.3/32 -p tcp -m tcp --dport 9090 -j MASQUERADE
-A POSTROUTING -s 10.99.0.102/32 -d 10.99.0.102/32 -p tcp -m tcp --dport 8200 -j MASQUERADE
-A POSTROUTING -s 10.99.0.100/32 -d 10.99.0.100/32 -p tcp -m tcp --dport 9102 -j MASQUERADE
-A POSTROUTING -s 10.99.0.100/32 -d 10.99.0.100/32 -p tcp -m tcp --dport 9090 -j MASQUERADE
-A POSTROUTING -s 10.99.0.100/32 -d 10.99.0.100/32 -p tcp -m tcp --dport 8081 -j MASQUERADE
-A POSTROUTING -s 10.99.0.101/32 -d 10.99.0.101/32 -p tcp -m tcp --dport 5432 -j MASQUERADE
-A POSTROUTING -s 10.99.0.104/32 -d 10.99.0.104/32 -p tcp -m tcp --dport 9001 -j MASQUERADE
-A POSTROUTING -s 10.99.0.104/32 -d 10.99.0.104/32 -p tcp -m tcp --dport 2020 -j MASQUERADE
-A DOCKER -p tcp -m tcp --dport 9101 -j DNAT --to-destination 10.99.0.2:9101
-A DOCKER -p tcp -m tcp --dport 18080 -j DNAT --to-destination 10.99.0.103:80
-A DOCKER -p tcp -m tcp --dport 10086 -j DNAT --to-destination 10.99.0.99:10086
-A DOCKER -p tcp -m tcp --dport 9000 -j DNAT --to-destination 10.99.0.99:9000
-A DOCKER -p tcp -m tcp --dport 9090 -j DNAT --to-destination 10.99.0.3:9090
-A DOCKER -p tcp -m tcp --dport 8200 -j DNAT --to-destination 10.99.0.102:8200
-A DOCKER -p tcp -m tcp --dport 9102 -j DNAT --to-destination 10.99.0.100:9102
-A DOCKER -p tcp -m tcp --dport 8443 -j DNAT --to-destination 10.99.0.100:9090
-A DOCKER -p tcp -m tcp --dport 8080 -j DNAT --to-destination 10.99.0.100:8081
-A DOCKER -p tcp -m tcp --dport 15432 -j DNAT --to-destination 10.99.0.101:5432
-A DOCKER -p tcp -m tcp --dport 9001 -j DNAT --to-destination 10.99.0.104:9001
-A DOCKER -p tcp -m tcp --dport 2020 -j DNAT --to-destination 10.99.0.104:2020
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A LIBVIRT_PRT -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Thu Nov 30 17:05:13 2023
